# ClientServer

./: CMakeLists.txt  README.md
src/: TCPClient.cpp  TCPClientServerProtocol.h  TCPServer.cpp
src/Application/: Application.cpp  Application.h
src/Client/TCPSession/: TCPSession.cpp  TCPSession.h
src/ClientSession/: ClientSession.cpp  ClientSession.h
src/Session/: Session.cpp  Session.h
src/SessionManager/: SessionManager.cpp  SessionManager.h
src/TCPClientApplication/: TCPClientApplication.cpp  TCPClientApplication.h
src/TCPClientApplication/TCPClientSession/: TCPClientSession.cpp  TCPClientSession.h
src/TCPClientRequest/: TCPClientRequest.cpp  TCPClientRequest.h
src/TCPClientSession/: TCPClientSession.cpp  TCPClientSession.h
src/TCPServerApplication/: TCPServerApplication.cpp  TCPServerApplication.h
src/TCPServerListenSession/: TCPServerListenSession.cpp  TCPServerListenSession.h
src/TCPServerResponce/: TCPServerResponce.cpp  TCPServerResponce.h
src/TCPServerResponse/: TCPServerResponse.cpp  TCPServerResponse.h
src/TCPServerSession/: TCPServerSession.cpp  TCPServerSession.h
src/TCPSocket/: TCPSocket.cpp  TCPSocket.h
